# Invest_Research

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  fixy.md  install-proxmox-native.sh  install-proxmox.sh  install.sh  invest_app.md  roadmap_research_agent.md
orchestrator/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  supervisord.conf
orchestrator/dashboard/: app.py  config_utils.py
orchestrator/dashboard/components/: charts.py
orchestrator/dashboard/pages/: account_detail.py  account_management.py  audit_logs.py  backtesting.py  model_compare.py  options_positions.py  options_spreads.py  overview.py  research.py  run_control.py  settings.py  wiki.py
orchestrator/src/: account_manager.py  audit_logger.py  decision_parser.py  fundamental_data.py  ghostfolio_client.py  llm_client.py  main.py  market_data.py  news_fetcher.py  portfolio_state.py  prompt_builder.py  research_agent.py  risk_manager.py  scanner.py  technical_indicators.py  trade_executor.py  transaction_costs.py  watchlist_manager.py
orchestrator/src/backtest/: __init__.py  historical_data.py  portfolio_sim.py  runner.py
orchestrator/src/options/: __init__.py  data.py  decision_parser.py  (+11 more)
orchestrator/tests/: test_decision_parser.py  test_llm_integration.py  test_options_positions.py  test_portfolio_state.py  test_prompt_builder.py  test_risk_manager.py  test_spreads_decision_parser.py  test_spreads_executor.py  test_spreads_risk_manager.py  test_spreads_selector.py  test_trade_executor.py
(+1 files in other folders)
